RegressionTests/TestSuiteExport/reject/inline_asm_empty_instruction.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmMissingInstructionMnemonic

fn f() void {
    asm {
        IF_C
    };
}
